--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".InitialActivity">
 
+    <!--CONSTRAINT LAYOUT SECUNDARIO-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,15 +14,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <!--BEM VINDO-->
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvBemVindo"
+            android:id="@+id/tvWelcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="40sp"
-            android:text="@string/label_BemVindo"
+            android:text="@string/label_Welcome"
 
             android:textColor="@color/black"
             android:fontFamily="sans-serif-medium"
@@ -30,58 +31,82 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <!--ENTRAR COM SUA CONTA-->
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="@string/label_Login"
+            android:text="@string/label_WelcomeDescription"
 
             android:textColor="@color/black"
             android:fontFamily="sans-serif-medium"
 
-            app:layout_constraintTop_toBottomOf="@+id/tvBemVindo"
+            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etEmail"
+        <!--LAYOUT MATERIAL DESING EMAIL-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiEmail"
+            style="?attr/textInputOutlinedDenseStyle"
             android:layout_width="320dp"
             android:layout_height="48dp"
-            android:hint="@string/label_Email"
+            android:hint="@string/lable_Email"
+            app:boxBackgroundColor="@color/white"
+            app:boxStrokeWidth="2dp"
 
-            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvLogin">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etSenha"
+            <!--EDIT TEXT MATERIAL DESING EMAIL-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--LAYOUT MATERIAL DESING SENHA-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiPassword"
+            style="?attr/textInputOutlinedDenseStyle"
             android:layout_width="320dp"
             android:layout_height="48dp"
-            android:hint="@string/label_Senha"
+            android:hint="@string/label_Password"
+            app:boxBackgroundColor="@color/white"
+            app:boxStrokeWidth="2dp"
 
-            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tiEmail"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <!--EDIT TEXT MATERIAL DESING SENHA-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogin"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:text="@string/label_Entrar"
+            android:text="@string/label_Login"
 
-
-            app:layout_constraintStart_toStartOf="@id/etSenha"
-            app:layout_constraintTop_toBottomOf="@+id/etSenha" />
+            app:layout_constraintStart_toStartOf="@id/tiPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tiPassword" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnRegistrar"
+            android:id="@+id/btnRegister"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:text="@string/label_RegistreSe"
+            android:text="@string/label_Register"
 
-            app:layout_constraintEnd_toEndOf="@id/etSenha"
-            app:layout_constraintTop_toBottomOf="@+id/etSenha" />
+            app:layout_constraintEnd_toEndOf="@id/tiPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tiPassword" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
