--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <!--CONSTRAINT LAYOUT SECUNDARIO-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,11 +16,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
+        <!--TEXTVIEW REGISTRO-->
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvRegistro"
+            android:id="@+id/tvRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Registro"
+            android:text="@string/label_RegisterTitle"
             android:textSize="38sp"
 
             android:textColor="@color/black"
@@ -28,72 +30,196 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <!--TEXT VIEW INFO PESSOAIS-->
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvInfoPessoal"
+            android:id="@+id/tvPersonalInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:text="Informações Pessoais:"
+            android:text="@string/label_PersonalInfo"
 
             android:textColor="@color/black"
             android:fontFamily="sans-serif-medium"
 
-            app:layout_constraintTop_toBottomOf="@id/tvRegistro"
+            app:layout_constraintTop_toBottomOf="@id/tvRegister"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etNome"
+        <!--LAYOUT MATERIAL DESIGN NOME-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiName"
+            style="?attr/textInputOutlinedDenseStyle"
             android:layout_width="320dp"
-            android:layout_height="48dp"
-            android:hint="Nome"
+            android:layout_height="58dp"
+            android:hint="@string/label_NameRegister"
+            app:boxStrokeWidth="2dp"
+            app:boxBackgroundColor="@color/white"
 
-            app:layout_constraintTop_toBottomOf="@+id/tvInfoPessoal"
+            app:layout_constraintTop_toBottomOf="@+id/tvPersonalInfo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etTelefone"
+            <!--EDIT TEXT MATERIAL DESIGN NOME-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--LAYOUT MATERIAL DESIGN TELEFONE-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiPhoneNumber"
+            style="?attr/textInputOutlinedDenseStyle"
             android:layout_width="320dp"
-            android:layout_height="48dp"
-            android:hint="Telefone"
+            android:layout_height="58dp"
+            android:hint="@string/label_PhoneNumber"
+            app:boxStrokeWidth="2dp"
+            app:boxBackgroundColor="@color/white"
 
-            app:layout_constraintTop_toBottomOf="@+id/etNome"
+            app:layout_constraintTop_toBottomOf="@+id/tiName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etEmail"
+            <!--EDIT TEXT MATERIAL DESGIN TELEFONE-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPhoneNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--LAYOUT MATERIAL DESIGN EMAIL-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiEmailRegister"
+            style="?attr/textInputOutlinedDenseStyle"
             android:layout_width="320dp"
-            android:layout_height="48dp"
-            android:hint="Email"
+            android:layout_height="58dp"
+            android:hint="@string/label_EmailRegister"
+            app:boxStrokeWidth="2dp"
+            app:boxBackgroundColor="@color/white"
 
-            app:layout_constraintTop_toBottomOf="@+id/etTelefone"
+            app:layout_constraintTop_toBottomOf="@+id/tiPhoneNumber"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent">
 
+            <!--EDIT TEXT MATERIAL DESIGN -->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmailRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--LAYOUT MATERIAL DESIGN SENHA-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiPasswordRegister"
+            style="?attr/textInputOutlinedDenseStyle"
+            android:layout_width="320dp"
+            android:layout_height="58dp"
+            android:hint="@string/label_PasswordRegister"
+            app:boxStrokeWidth="2dp"
+            app:boxBackgroundColor="@color/white"
+            app:endIconMode="password_toggle"
+
+            app:layout_constraintTop_toBottomOf="@+id/tiEmailRegister"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <!--EDIT TEXT MATERIAL DESIGN -->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPasswordRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--ENDEREÇO DE ATENDIMENTO-->
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvEndereco"
+            android:id="@+id/tvAdrTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Endereço de Atendimento"
+            android:text="@string/label_AdrTitle"
             android:textSize="25sp"
 
             android:textColor="@color/black"
             android:fontFamily="sans-serif-medium"
 
-            app:layout_constraintTop_toBottomOf="@id/etEmail"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tiPasswordRegister"
+            app:layout_constraintStart_toStartOf="parent"/>
 
+        <!--LAYOUT MATERIAL DESIGN ENDEREÇO 1-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiAdr1"
+            style="?attr/textInputOutlinedDenseStyle"
+            android:layout_width="220dp"
+            android:layout_height="58dp"
+            android:hint="@string/label_Adr1"
+            app:boxStrokeWidth="2dp"
+            app:boxBackgroundColor="@color/white"
 
+            app:layout_constraintTop_toBottomOf="@+id/tvAdrTitle"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <!--EDIT TEXT MATERIAL DESIGN -->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etAdr1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--BOTÃO ADICIONAR ENDEREÇO-->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btnAddAdr"
+            android:layout_width="95dp"
+            android:layout_height="58dp"
+            android:backgroundTint="@color/black"
+            android:src="@drawable/baseline_add_24white"
+
+            app:layout_constraintTop_toBottomOf="@id/tvAdrTitle"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!--BREVE CURRÍCULO-->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvShortResume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_ShortResume"
+            android:textSize="25sp"
+
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-medium"
+
+            app:layout_constraintTop_toBottomOf="@id/tiAdr1"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <!--LAYOUT MATERIAL DESIGN ENDEREÇO 1-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tiShortResume"
+            style="?attr/textInputOutlinedDenseStyle"
+            android:layout_width="320dp"
+            android:layout_height="96dp"
+            android:hint="@string/label_ProfessionalExperience"
+            app:boxStrokeWidth="2dp"
+            app:boxBackgroundColor="@color/white"
+
+            app:layout_constraintTop_toBottomOf="@+id/tvShortResume"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <!--EDIT TEXT MATERIAL DESIGN -->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etShortResume"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--BOTÃO REGISTRAR-->
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnCadastrar"
+            android:id="@+id/btnSignIn"
             android:layout_width="130dp"
             android:layout_height="48dp"
-            android:text="Cadastrar"
+            android:text="@string/label_RegisterBtn"
 
-            app:layout_constraintTop_toBottomOf="@id/tvEndereco"
+            app:layout_constraintTop_toBottomOf="@id/tiShortResume"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+
 
 
 
