--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:layout_marginLeft="15dp"
-        android:hint="Email"
+        android:hint="@string/label_EmailRegister"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
@@ -37,7 +37,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:backgroundTint="@color/black"
-        android:hint="Senha"
+        android:hint="@string/label_Password"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
@@ -49,7 +49,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:backgroundTint="@color/black"
-        android:hint=" Confirme a Senha"
+        android:hint="@string/label_ConfirPass"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
@@ -61,7 +61,7 @@
         android:layout_marginLeft="15dp"
         android:background="@color/black"
         android:textColor="@color/white"
-        android:text="Cadastrar"
+        android:text="@string/label_Cadastrar"
         android:layout_marginTop="24dp"/>
 
 
