--- a/app/src/main/res/layout/fragment_singup.xml
+++ b/app/src/main/res/layout/fragment_singup.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_gravity="center"
-    tools:context=".CreateActivity">
+    tools:context=".SingUpFragment">
 
     <TextView
         android:id="@+id/tvLabelInstrucoes"
@@ -17,16 +17,41 @@
         android:fontFamily="sans-serif-medium"
         android:textAlignment="center"
         android:layout_marginBottom="200dp"
-        android:text="@string/label_Cadastro"/>
+        android:layout_marginTop="40dp"
+        android:text="@string/label_Singup"/>
+
+    <EditText
+        android:id="@+id/etNome"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/black"
+        android:hint="@string/label_NameRegister"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
 
     <EditText
         android:id="@+id/etemail"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:hint="@string/label_EmailRegister"
         android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
+
+    <EditText
+        android:id="@+id/etTelefone"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="15dp"
+        android:backgroundTint="@color/black"
+        android:hint="@string/label_PhoneNumber"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
 
@@ -35,33 +60,22 @@
         android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:backgroundTint="@color/black"
         android:hint="@string/label_Password"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black" />
-
-    <EditText
-        android:id="@+id/etConfirmarSenha"
-        android:layout_width="380dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="15dp"
-        android:backgroundTint="@color/black"
-        android:hint="@string/label_ConfirPass"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
     
     <Button
         android:id="@+id/btnCadastrar"
-        android:layout_width="380dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="150dp"
+        android:textAlignment="center"
         android:background="@color/black"
         android:textColor="@color/white"
-        android:text="@string/label_Cadastrar"
+        android:text="@string/label_Signup2"
         android:layout_marginTop="24dp"/>
 
 
