--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitialActivity">
+    tools:context=".LogInFragment">
 
     <!--CONSTRAINT LAYOUT SECUNDARIO-->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -94,6 +94,7 @@
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:text="@string/label_Register"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
 
             app:layout_constraintTop_toBottomOf="@+id/btnLogin"
             tools:layout_editor_absoluteX="10dp"
